ClutterGrab leak
According to valgrind the ClutterGrab
allocated in clutter_stage_grab()
is leaked. All calls that result in such a leak are coming from js, so my guess would be that this is due clutter_stage_grab()
being annotated as transfer none
. Since I can't find any place that would free this other than calling clutter_grab_unref()
on the returned ClutterGrab
and StButton
as well as ClutterText
do this, this does not look like it should be transfer none
.